corrige link de retorno de paginas secundarias

--- a/menus/projetos.html
+++ b/menus/projetos.html
@@ -48,7 +48,7 @@
   
   </div>
   
-    <div><button class="voltar"><a href="/index.html">Voltar</a></button></div>
+    <div><button class="voltar"><a href="../index.html">Voltar</a></button></div>
   
     
 
