--- a/menus/falecomigo.html
+++ b/menus/falecomigo.html
@@ -31,7 +31,7 @@
   
   </div>
   
-    <div><button class="voltar"><a href="/index.html">Voltar</a></button></div>
+    <div><button class="voltar"><a href="../index.html">Voltar</a></button></div>
   
     
 </body>
