--- a/menus/quemsou.html
+++ b/menus/quemsou.html
@@ -56,7 +56,7 @@
 
 </div>
 
-  <div><button class="voltar"><a href="/index.html">Voltar</a></button></div>
+  <div><button class="voltar"><a href="../index.html">Voltar</a></button></div>
 
   
 
