corrige link para imagens na page projetos

--- a/menus/projetos.html
+++ b/menus/projetos.html
@@ -25,7 +25,7 @@
   <div class="perfilgit">
     <p>Para acessar a todos os meus projetos e acompanhar como está sendo a minha transformação durante essa jornada de aprendizagem, você pode ir ao meu <strong><a class="link" href="https://github.com/NodjaLima">GitHub</a></strong> e comparar todos os trabalhos. O código é livre. Venha pro codigo você também, vem!</p>
   
-    <img class="git" src="/githubperfil.jpg" alt="imagem do perfil no github">
+    <img class="git" src="../githubperfil.jpg" alt="imagem do perfil no github">
   </div>
 
     <h3>Formulário</h3>
@@ -33,13 +33,13 @@
   <div class="formulario">
     <p>Meu primeiro projeto prático foi um <strong>formulário</strong>. Fiz em html e css. Foi realizado no segundo dia do curso da Resilia. Quando eu vi o resultado final não conseguia acreditar. Cada elemento na tela foi uma luz no meu caminho. E aqui descobri também que a parte do design talvez não seja minha melhor qualidade. :)</p>
 
-    <img class="forms" src="/forms.jpg" alt="imagem da pagina formulário">
+    <img class="forms" src="../forms.jpg" alt="imagem da pagina formulário">
 
   </div>
   
     <h3>Tragetória</h3>
 <div class="tragetoria">
-    <img class="tragetoria" src="/tragetoria.jpg" alt="imagem da pagina tragetoria">
+    <img class="tragetoria" src="../tragetoria.jpg" alt="imagem da pagina tragetoria">
   
     <p>Aplicando os conhecimentos já no primeiro dia, fizemos uma página HTML simples, sem uso de muitas propriedades CSS. Foi a partir dessa ideia que tive a coragem de iniciar esse projeto em que você agora me lê. Com essa pequena página aprendi os principios básicos de como estilizar paginas, com uso de background, alteração de cores, inserção de imagens e box model.
     </p>
