insere informações de contato

--- a/menus/falecomigo.html
+++ b/menus/falecomigo.html
@@ -13,22 +13,16 @@
 
     <header>
       
-      <h1>Só sei que nada sei...</h1>
+      <h1>É muito facil me encontrar!</h1>
     
     </header>
-  
-    <h3>Do Piauí para o mundo</h3>
-  
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat delectus, deleniti perferendis illo dignissimos nemo consectetur voluptatibus ex repellat odit amet commodi quis nostrum vitae libero nobis harum animi suscipit.</p>
-  
-    <h3>O mundo é um moinho</h3>
-  
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quisquam facilis, beatae esse veritatis saepe eos ducimus doloremque nulla, fugiat, porro corrupti tenetur quis impedit adipisci necessitatibus magni dolores sit?</p>
-  
-    <h3>Só os loucos sabem</h3>
-  
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum adipisci quos ipsam laudantium, quas tenetur dolore asperiores! Deleniti a sunt molestias inventore necessitatibus nam voluptas dolores et accusantium cum!</p>
-  
+  <div class="listadecontato">
+    <ul>
+    <li><a href="https://www.linkedin.com/in/nodja-moama-p-lima-9138459a/">LinkedIn</a></li>
+    <li><a href="https://github.com/NodjaLima">GitHub</a></li>
+    <li><a href="https://twitter.com/cani_nana">Twitter</a></li>
+  </ul>
+  </div>
   </div>
   
     <div><button class="voltar"><a href="../index.html">Voltar</a></button></div>
